Integrate new SpriteEditor & redesign layout